[package]
name = "config_link"
version = "0.2.0"
authors = ["gyara <me@gyara.moe>"]
edition = "2018"

[dependencies]
thiserror = "1.0.10"
toml = "0.5.6"
structopt = "0.3.8"

[dependencies.serde]
version = "1.0.104"
features = ["derive"]

[dependencies.async-std]
version = "1.4.0"
features = ["attributes"]
